Fix long, overflow continent names in russian version of fedoracommunity.org

--- a/fedoracommunity.org/static/css/fedoracommunity960.css
+++ b/fedoracommunity.org/static/css/fedoracommunity960.css
@@ -224,7 +224,7 @@ ul, ol {
 	background: url('../images/tab_background.png') repeat-x;
 }
 
-#continent-nav h3 { padding-top: 18px; font-size: 12px; }
+#continent-nav h3 { padding-top: 18px; font-size: 12px; overflow-wrap: break-word; }
 
 /* each individual continent icon */
 .continent-icon { padding: 9px; float: left; }
@@ -232,18 +232,22 @@ ul, ol {
 .asia-head { border-top: 6px #79db32 solid; background-color: inherit; margin-right: 0; padding-right: 13px; height: 69px; border-left: 1px #badbb6 solid; border-bottom: 1px #babdb6 solid;}
 .asia-head:hover { border-top: 6px #79db32 solid; background-color: #dfdfdf; height: 69px;}
 .asia-head.hover { border-top: 6px #79db32 solid; background-color: #dfdfdf; height: 69px;}
+.asia-head h3 { padding-left: 68px; }
 
 .africa-head { border-top: 6px #a07cbc solid; background-color: inherit; margin: auto 0; padding: 0 7px; height: 69px; 	border-bottom: 1px #babdb6 solid;}
 .africa-head:hover { border-top: 6px #a07cbc solid; background-color: #dfdfdf; height:  69px; }
 .africa-head.hover { border-top: 6px #a07cbc solid; background-color: #dfdfdf; height:  69px; }
+.africa-head h3 { padding-left: 51px; }
 
 .america-head { border-top: 6px #e5972b solid; background-color: inherit; margin: auto 0; padding: 0 7px; height: 69px; 	border-bottom: 1px #babdb6 solid;}
 .america-head:hover { border-top: 6px #e5972b solid; background-color: #dfdfdf; height: 69px; }
 .america-head.hover { border-top: 6px #e5972b solid; background-color: #dfdfdf; height: 69px; }
+.america-head h3 { padding-left: 63px; }
 
 .europe-head { border-top: 6px #db3279 solid; background-color: inherit; margin-left: 0; padding-left: 14px; height: 69px; border-bottom: 1px #babdb6 solid;}
 .europe-head:hover { border-top: 6px #db3279 solid; background-color: #dfdfdf; height: 69px; }
 .europe-head.hover { border-top: 6px #db3279 solid; background-color: #dfdfdf; height: 69px; }
+.europe-head h3 { padding-left: 98px; }
 
 .asia-head, .africa-head, .america-head, .europe-head {
 	border-right: 1px #babdb6 solid;
